--- a/_config.yml
+++ b/_config.yml
@@ -14,13 +14,13 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Health App
-email: rafailiasim@gmail.com
+email: simple@example.com
 description: > # this means to ignore newlines until "baseurl:"
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://moya10.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://healthabits.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 author: Digital Society School
 twitter_username: 
-github_username:  moya10
+github_username:  healthabits
 
 # Build settings
 markdown: kramdown
